Fixed fund. issue w/ Spacing

--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,6 +1,6 @@
 header{
   margin-top: 1rem;
-  width:68%;
+  
   height:5rem;
   display:flex;
 }
