--- a/CSS/navigationBar.css
+++ b/CSS/navigationBar.css
@@ -1,8 +1,8 @@
 .nav-selection{
   display:flex;
   align-items: center;
-  width:60%;  
-  margin-right: 7rem;
+    
+  
   margin-top:.5rem;
 }
 nav{
