--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,12 +2,18 @@ html{
   font-size: 62.5%;
 }
 body{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+.outermost-container{
  height:200vh; 
  display:flex;
  flex-direction: column;
  align-items: center;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: 650;
+ width:90rem;
 }
 
 a{
